--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "scripts": {
     "build": "tsc",
     "start": "node --loader ts-node/esm ./src/index.ts",
-    "dev": "nodemon --watch src --ext ts,js --exec \"npm start\""
+    "dev": "nodemon --watch src --ext ts,js --exec \"npm start\"",
+    "test": "ts-mocha ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/chai": "^4.3.16",
+    "@types/mocha": "^10.0.7",
     "@types/node": "^20.14.9",
+    "chai": "^5.1.1",
+    "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   }
